feat: add dark theme and theme change

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,9 @@
   <title>Cadastros</title>
 </head>
 
-<body>
+<body style="margin: 0; padding: 0;">
   <noscript>Você precisa habilitar o JavaScript para executar este aplicativo.</noscript>
   <div id="root"></div>
-
 </body>
 
 </html>
